# link-project-to-chat

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rebuild.sh  sandbox-plan.md  where-are-we.md
.github/workflows/: ci.yml
docs/: 2026-04-22-remediation-plan.md  2026-04-25-spec0-followups.md  CHANGELOG.md  TODO.md  backend-abstraction-pm-analysis.md  backend-phase-1-smoke-evidence.md  issues-2026-04-22.md  review-2026-04-22-batch1.md
scripts/: release.sh  restart.sh  stop.sh
src/link_project_to_chat/: __init__.py  _auth.py  auth.py  bot.py  botfather.py  chat_history.py  claude_client.py  cli.py  config.py  config_models.py  constants.py  conversation_log.py  enums.py  events.py  exceptions.py  formatting.py  github_client.py  group_filters.py  group_state.py  health.py  history.py  hooks.py  livestream.py  logging_config.py  plugin.py  protocols.py  rate_limiter.py  roles.py  sessions.py  skills.py  stream.py  task_manager.py  team_safety.py  transcriber.py  ui.py
tests/: conftest.py  test_auth.py  test_auth_hot_reload.py  test_auth_m10.py  test_auth_migration_e2e.py  test_auth_roles.py  test_backend_command.py  test_backend_lockout.py  test_backend_naming_lockout.py  test_bot.py  test_bot_backend_lockout.py  test_bot_chat_history_integration.py  test_bot_hot_reload_wiring.py  test_bot_plugin_hooks.py  test_bot_respond_in_groups.py  test_bot_safety_prompt_wiring.py  test_bot_streaming.py  test_bot_strip_self_mention.py  test_bot_team_wiring.py  test_bot_voice.py  test_botfather.py  test_bundled_personas.py  test_cap_probe.py  test_capability_gating.py  test_chat_history.py  test_claude_client.py  test_claude_usage_cap.py  test_cli.py  test_cli_transport.py  test_config.py  test_config_allowed_users.py  test_config_m11.py  test_config_meta_dir.py  test_config_migration.py  test_config_peer_refs.py  test_config_respond_in_groups.py  test_config_safety_prompt.py  test_config_validation.py  test_constants.py  test_context_command.py  (+42 more)
(+161 files in other folders)
