[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "link-project-to-chat"
version = "0.10.0"
description = "Link a project directory to a Telegram bot that chats with Claude"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Rezo Imnadze", email = "rezo@imnadze.ge" },
]
keywords = ["claude", "telegram", "bot", "ai", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "python-telegram-bot>=22.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/rimnadze/link-project-to-chat"
Repository = "https://github.com/rimnadze/link-project-to-chat"
Issues = "https://github.com/rimnadze/link-project-to-chat/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/link_project_to_chat"]

[project.scripts]
link-project-to-chat = "link_project_to_chat.cli:main"

[tool.mypy]
packages = ["link_project_to_chat"]
mypy_path = "src"
strict = true

[[tool.mypy.overrides]]
module = "telegram.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["SIM105", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["link_project_to_chat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
